[package]
name = "bigbytes-common-meta-types"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
anyerror = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-meta-stoerr = { workspace = true }
bigbytes-common-tracing = { workspace = true }
deepsize = { workspace = true }
derive_more = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
openraft = { workspace = true }
prost = { workspace = true }
rotbl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
bigbytes-common-building = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["num-derive", "prost"]

[lints]
workspace = true
