[package]
name = "bigbytes-common-catalog"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
arrow-schema = { workspace = true }
async-backtrace = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

bigbytes-common-ast = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-config = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-expression = { workspace = true }
bigbytes-common-io = { workspace = true }
bigbytes-common-meta-api = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-meta-store = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-pipeline-core = { workspace = true }
bigbytes-common-settings = { workspace = true }
bigbytes-common-storage = { workspace = true }
bigbytes-common-users = { workspace = true }
bigbytes-storages-common-session = { workspace = true }
bigbytes-storages-common-table-meta = { workspace = true }
dyn-clone = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
parquet = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thrift = { workspace = true }
typetag = { workspace = true }
xorf = { workspace = true, default-features = false, features = ["binary-fuse"] }

[dev-dependencies]
goldenfile = { workspace = true }
maplit = { workspace = true }

[lints]
workspace = true
