[package]
name = "bigbytesdb-common-catalog"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
arrow-schema = { workspace = true }
async-backtrace = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

bigbytesdb-common-ast = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-config = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-io = { workspace = true }
bigbytesdb-common-meta-api = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-store = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-pipeline-core = { workspace = true }
bigbytesdb-common-settings = { workspace = true }
bigbytesdb-common-storage = { workspace = true }
bigbytesdb-common-users = { workspace = true }
bigbytesdb-storages-common-session = { workspace = true }
bigbytesdb-storages-common-table-meta = { workspace = true }
dyn-clone = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
parquet = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thrift = { workspace = true }
typetag = { workspace = true }
xorf = { workspace = true, default-features = false, features = ["binary-fuse"] }

[dev-dependencies]
goldenfile = { workspace = true }
maplit = { workspace = true }

[lints]
workspace = true
