[package]
name = "bigbytesdb-codegen"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
bigbytesdb-common-expression = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
