[package]
name = "bigbytesdb-common-config"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = true

[features]
default = []
storage-hdfs = ["bigbytesdb-common-storage/storage-hdfs"]

[package.metadata.cargo-machete]
ignored = ["strum"]

[dependencies]
chrono-tz = { workspace = true }
clap = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-grpc = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-storage = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serfig = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
bigbytesdb-common-building = { workspace = true }

[lints]
workspace = true
