[package]
authors = { workspace = true }
description = "A real-time Cloud Distributed Query Engine"
edition = { workspace = true }
license = { workspace = true }
name = "bigbytes-enterprise-query"
publish = { workspace = true }
version = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
async-backtrace = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dashmap = { workspace = true }
bigbytes-common-ast = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-catalog = { workspace = true }
bigbytes-common-config = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-expression = { workspace = true }
bigbytes-common-functions = { workspace = true }
bigbytes-common-io = { workspace = true }
bigbytes-common-license = { workspace = true }
bigbytes-common-management = { workspace = true }
bigbytes-common-meta-api = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-meta-store = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-metrics = { workspace = true }
bigbytes-common-pipeline-core = { workspace = true }
bigbytes-common-pipeline-sinks = { workspace = true }
bigbytes-common-pipeline-sources = { workspace = true }
bigbytes-common-pipeline-transforms = { workspace = true }
bigbytes-common-sql = { workspace = true }
bigbytes-common-storage = { workspace = true }
bigbytes-common-storages-fuse = { workspace = true }
bigbytes-common-storages-stream = { workspace = true }
bigbytes-common-tracing = { workspace = true }
bigbytes-common-users = { workspace = true }
bigbytes-enterprise-aggregating-index = { workspace = true }
bigbytes-enterprise-attach-table = { workspace = true }
bigbytes-enterprise-background-service = { workspace = true }
bigbytes-enterprise-data-mask-feature = { workspace = true }
bigbytes-enterprise-fail-safe = { workspace = true }
bigbytes-enterprise-hilbert-clustering = { workspace = true }
bigbytes-enterprise-inverted-index = { workspace = true }
bigbytes-enterprise-resources-management = { workspace = true }
bigbytes-enterprise-storage-encryption = { workspace = true }
bigbytes-enterprise-storage-quota = { workspace = true }
bigbytes-enterprise-stream-handler = { workspace = true }
bigbytes-enterprise-vacuum-handler = { workspace = true }
bigbytes-enterprise-virtual-column = { workspace = true }
bigbytes-query = { workspace = true }
bigbytes-storages-common-cache = { workspace = true }
bigbytes-storages-common-io = { workspace = true }
bigbytes-storages-common-pruner = { workspace = true }
bigbytes-storages-common-table-meta = { workspace = true }
derive-visitor = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
jwt-simple = { workspace = true }
log = { workspace = true }
opendal = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
jsonb = { workspace = true }
tantivy = { workspace = true }

[build-dependencies]
bigbytes-common-building = { workspace = true }

[lints]
workspace = true
