[package]
authors = { workspace = true }
description = "A real-time Cloud Distributed Query Engine"
edition = { workspace = true }
license = { workspace = true }
name = "bigbytesdb-enterprise-query"
publish = { workspace = true }
version = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
async-backtrace = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dashmap = { workspace = true }
bigbytesdb-common-ast = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-catalog = { workspace = true }
bigbytesdb-common-config = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-functions = { workspace = true }
bigbytesdb-common-io = { workspace = true }
bigbytesdb-common-license = { workspace = true }
bigbytesdb-common-management = { workspace = true }
bigbytesdb-common-meta-api = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-store = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-metrics = { workspace = true }
bigbytesdb-common-pipeline-core = { workspace = true }
bigbytesdb-common-pipeline-sinks = { workspace = true }
bigbytesdb-common-pipeline-sources = { workspace = true }
bigbytesdb-common-pipeline-transforms = { workspace = true }
bigbytesdb-common-sql = { workspace = true }
bigbytesdb-common-storage = { workspace = true }
bigbytesdb-common-storages-fuse = { workspace = true }
bigbytesdb-common-storages-stream = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
bigbytesdb-common-users = { workspace = true }
bigbytesdb-enterprise-aggregating-index = { workspace = true }
bigbytesdb-enterprise-attach-table = { workspace = true }
bigbytesdb-enterprise-background-service = { workspace = true }
bigbytesdb-enterprise-data-mask-feature = { workspace = true }
bigbytesdb-enterprise-fail-safe = { workspace = true }
bigbytesdb-enterprise-hilbert-clustering = { workspace = true }
bigbytesdb-enterprise-inverted-index = { workspace = true }
bigbytesdb-enterprise-resources-management = { workspace = true }
bigbytesdb-enterprise-storage-encryption = { workspace = true }
bigbytesdb-enterprise-storage-quota = { workspace = true }
bigbytesdb-enterprise-stream-handler = { workspace = true }
bigbytesdb-enterprise-vacuum-handler = { workspace = true }
bigbytesdb-enterprise-virtual-column = { workspace = true }
bigbytesdb-query = { workspace = true }
bigbytesdb-storages-common-cache = { workspace = true }
bigbytesdb-storages-common-io = { workspace = true }
bigbytesdb-storages-common-pruner = { workspace = true }
bigbytesdb-storages-common-table-meta = { workspace = true }
derive-visitor = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
jwt-simple = { workspace = true }
log = { workspace = true }
opendal = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
jsonb = { workspace = true }
tantivy = { workspace = true }

[build-dependencies]
bigbytesdb-common-building = { workspace = true }

[lints]
workspace = true
