[package]
name = "bigbytes-common-formats"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]

bigbytes-common-base = { workspace = true }
bigbytes-common-column = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-expression = { workspace = true }
bigbytes-common-io = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-settings = { workspace = true }
bigbytes-functions-scalar-datetime = { workspace = true }
bigbytes-storages-common-blocks = { workspace = true }
bigbytes-storages-common-table-meta = { workspace = true }

aho-corasick = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bstr = { workspace = true }
chrono-tz = { workspace = true }
geozero = { workspace = true }
goldenfile = { workspace = true }
hex = { workspace = true }
jiff = { workspace = true }
jsonb = { workspace = true }
lexical-core = { workspace = true }
match-template = { workspace = true }
micromarshal = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
roaring = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dev-dependencies]

pretty_assertions = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["match-template"]
