[package]
name = "bigbytesdb-common-formats"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]

bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-column = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-io = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-settings = { workspace = true }
bigbytesdb-functions-scalar-datetime = { workspace = true }
bigbytesdb-storages-common-blocks = { workspace = true }
bigbytesdb-storages-common-table-meta = { workspace = true }

aho-corasick = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bstr = { workspace = true }
chrono-tz = { workspace = true }
geozero = { workspace = true }
goldenfile = { workspace = true }
hex = { workspace = true }
jiff = { workspace = true }
jsonb = { workspace = true }
lexical-core = { workspace = true }
match-template = { workspace = true }
micromarshal = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
roaring = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dev-dependencies]

pretty_assertions = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["match-template"]
