[package]
name = "bigbytes-common-functions"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
bstr = { workspace = true }
bumpalo = { workspace = true }
crc32fast = { workspace = true }
ctor = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-column = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-expression = { workspace = true }
bigbytes-common-hashtable = { workspace = true }
bigbytes-common-io = { workspace = true }
bigbytes-common-openai = { workspace = true }
bigbytes-common-vector = { workspace = true }
bigbytes-functions-scalar-arithmetic = { workspace = true }
bigbytes-functions-scalar-datetime = { workspace = true }
bigbytes-functions-scalar-decimal = { workspace = true }
bigbytes-functions-scalar-geo = { workspace = true }
bigbytes-functions-scalar-integer-basic-arithmetic = { workspace = true }
bigbytes-functions-scalar-math = { workspace = true }
bigbytes-functions-scalar-numeric-basic-arithmetic = { workspace = true }
ethnum = { workspace = true }
geo = { workspace = true }
geohash = { workspace = true }
geozero = { workspace = true }
h3o = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
jaq-core = { workspace = true }
jaq-interpret = { workspace = true }
jaq-parse = { workspace = true }
jaq-std = { workspace = true }
jiff = { workspace = true }
jsonb = { workspace = true }
lexical-core = { workspace = true }
libm = { workspace = true }
match-template = { workspace = true }
md-5 = { workspace = true }
naive-cityhash = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
proj4rs = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
simdutf8 = { workspace = true }
simple_hll = { workspace = true, features = ["serde_borsh"] }
siphasher = { workspace = true }
strength_reduce = { workspace = true }
stringslice = { workspace = true }
twox-hash = { workspace = true }
unicase = { workspace = true }

[dev-dependencies]
comfy-table = { workspace = true }
criterion = { workspace = true }
bigbytes-common-ast = { workspace = true }
goldenfile = { workspace = true }

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["md-5"]
