[package]
name = "bigbytes-common-management"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
async-backtrace = { workspace = true }
async-trait = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-functions = { workspace = true }
bigbytes-common-meta-api = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-store = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-proto-conv = { workspace = true }
enumflags2 = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bigbytes-common-expression = { workspace = true }
bigbytes-common-meta-embedded = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
