[package]
name = "bigbytesdb-common-management"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
async-backtrace = { workspace = true }
async-trait = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-functions = { workspace = true }
bigbytesdb-common-meta-api = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-store = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-proto-conv = { workspace = true }
enumflags2 = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-meta-embedded = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
