[package]
name = "bigbytes-common-script"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
bigbytes-common-ast = { workspace = true }
bigbytes-common-exception = { workspace = true }
derive-visitor = { workspace = true }
fastrace = { workspace = true }

[dev-dependencies]
goldenfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
unindent = { workspace = true }

[lints]
workspace = true
